# huecaml

./: .gitignore  dune-project
_build/: .db  .digest-db  log
_build/.promotion-staging/test/: test_huecaml.ml
_build/default/: META.huecaml  huecaml.dune-package  huecaml.install  huecaml.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/50ff7f7d7ba7e2ead4905b86a3db58f1/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmx
_build/default/src/: bridge.pp.ml  bridge.pp.mli  client.ml  client.pp.ml  client.pp.mli  huecaml.cma  huecaml.cmxa  huecaml.cmxs  huecaml.pp.ml  huecaml__.ml-gen  light.mli  light.pp.ml  light.pp.mli  resource.pp.ml  room.ml  room.pp.ml  room.pp.mli  scene.ml  scene.pp.ml  scene.pp.mli
_build/default/src/.huecaml.objs/: huecaml.impl.all-deps  huecaml.impl.d  huecaml__Bridge.impl.all-deps  huecaml__Bridge.impl.d  huecaml__Bridge.intf.d  huecaml__Client.impl.d  huecaml__Client.intf.d  huecaml__Light.impl.d  huecaml__Light.intf.d  huecaml__Resource.impl.d  huecaml__Room.impl.d  huecaml__Room.intf.d  huecaml__Scene.impl.d  huecaml__Scene.intf.all-deps  huecaml__Scene.intf.d
_build/default/src/.merlin-conf/: lib-huecaml
_build/default/test/: test_huecaml.cma  test_huecaml.cmxa  test_huecaml.cmxs  test_huecaml.pp.ml
src/: bridge.ml  bridge.mli  client.ml  client.mli  dune  event.ml  event.mli  grouped_light.ml  grouped_light.mli  huecaml.ml  light.ml  resource.ml  room.ml  scene.ml  scene.mli  zone.ml  zone.mli
test/: dune
(+91 files in other folders)
